feat(proxy): add support for roverse
This commit adds the roverse worker as a fallback mechanism for requests, as well as other changes to improve analysis functionality and request optimization.
