# docs/api/swagger.json
@@ -127,6 +127,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "isLocked": {
+                    "type": "boolean"
+                },
                 "lastScanned": {
                     "type": "string"
                 },
@@ -142,8 +145,8 @@
                 "owner": {
                     "$ref": "#/definitions/types.GroupUser"
                 },
-                "reason": {
-                    "type": "string"
+                "reasons": {
+                    "$ref": "#/definitions/internal_rest_types.Reasons"
                 },
                 "reputation": {
                     "type": "integer"
@@ -157,6 +160,29 @@
                 "upvotes": {
                     "type": "integer"
                 }
+            }
+        },
+        "internal_rest_types.Reason": {
+            "type": "object",
+            "properties": {
+                "confidence": {
+                    "type": "number"
+                },
+                "evidence": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_rest_types.Reasons": {
+            "type": "object",
+            "additionalProperties": {
+                "$ref": "#/definitions/internal_rest_types.Reason"
             }
         },
         "internal_rest_types.User": {
@@ -189,22 +215,16 @@
                         "type": "integer"
                     }
                 },
-                "followerCount": {
-                    "type": "integer"
-                },
-                "followingCount": {
-                    "type": "integer"
-                },
                 "friends": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/types.Friend"
+                        "$ref": "#/definitions/types.UserFriend"
                     }
                 },
                 "games": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/types.Game"
+                        "$ref": "#/definitions/types.UserGame"
                     }
                 },
                 "groups": {
@@ -215,6 +235,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "isBanned": {
+                    "type": "boolean"
                 },
                 "lastScanned": {
                     "type": "string"
@@ -228,8 +251,8 @@
                 "name": {
                     "type": "string"
                 },
-                "reason": {
-                    "type": "string"
+                "reasons": {
+                    "$ref": "#/definitions/internal_rest_types.Reasons"
                 },
                 "reputation": {
                     "type": "integer"
@@ -239,34 +262,6 @@
                 },
                 "upvotes": {
                     "type": "integer"
-                }
-            }
-        },
-        "types.Friend": {
-            "type": "object",
-            "properties": {
-                "displayName": {
-                    "type": "string"
-                },
-                "hasVerifiedBadge": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "types.Game": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
                 }
             }
         },
@@ -309,14 +304,12 @@
                 "flagged",
                 "confirmed",
                 "cleared",
-                "locked",
                 "unflagged"
             ],
             "x-enum-varnames": [
                 "GroupStatusFlagged",
                 "GroupStatusConfirmed",
                 "GroupStatusCleared",
-                "GroupStatusLocked",
                 "GroupStatusUnflagged"
             ]
         },
@@ -326,6 +319,34 @@
                 "displayName": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.UserFriend": {
+            "type": "object",
+            "properties": {
+                "displayName": {
+                    "type": "string"
+                },
+                "hasVerifiedBadge": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.UserGame": {
+            "type": "object",
+            "properties": {
                 "id": {
                     "type": "integer"
                 },
@@ -354,14 +375,12 @@
                 "flagged",
                 "confirmed",
                 "cleared",
-                "banned",
                 "unflagged"
             ],
             "x-enum-varnames": [
                 "UserStatusFlagged",
                 "UserStatusConfirmed",
                 "UserStatusCleared",
-                "UserStatusBanned",
                 "UserStatusUnflagged"
             ]
         }
